cleaning snapshot directory and switching to fixed thread pool for scraping